<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Qittaro</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login_user_name_hint">url_name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_text">Sing In</string>
    <string name="login_error_title">Login Error</string>
    <string name="login_error_message">Either the username or password is incorrect.</string>
    <string name="login_success_message">Login has been completed.</string>
    <string name="article_empty_message">Article was not found.</string>
    <string name="article_post_detail_format">by %1$s / at %2$s ago.</string>
    <string name="search_in_stoked_text">Search from the article you have stock.</string>
    <string name="article_detail_loading_title">Loading…</string>
    <string name="article_detail_stock_text">Stock this article.</string>
    <string name="article_detail_stock_process_text">now stocked…</string>
    <string name="article_detail_un_stock_text">Release the stock.</string>
    <string name="article_detail_un_stock_process_text">now release stock…</string>
    <string name="article_detail_stock_message">stock article.</string>
    <string name="article_detail_un_stock_message">release stock</string>
    <string name="search_menu_search_title">Search</string>
    <string name="search_sub_title_prefix">Search Keyword</string>
    <string name="search_menu_query_hint_text">Please separated by a space when you search multiple.</string>
    <string name="menu_article_detail_browser_title">Browser</string>
    <string name="menu_article_detail_stocked_title">Stock</string>
    <string name="menu_article_detail_share_title">Share</string>
    <string name="menu_article_detail_share_chooser_title">Choose Share App</string>
    <string name="menu_home_search_title">Search</string>
    <string name="left_drawer_login_title">Login</string>
    <string name="left_drawer_public_title">Public</string>
    <string name="left_drawer_tag_title">Tag</string>
    <string name="left_drawer_stocked_title">Stocked</string>
    <string name="left_drawer_mine_title">Mine</string>
    <string name="left_drawer_following_tag_title">Following Tag</string>
    <string name="left_drawer_following_user_title">Following User</string>
    <string name="user_detail_page_info_title">Info</string>
    <string name="user_detail_page_post_article_title">Post Articles</string>
    <string name="user_detail_page_stocked_title">Stocks</string>
    <string name="user_detail_page_following_tag_title">Following Tags</string>
    <string name="user_info_page_name_title">Name</string>
    <string name="user_info_page_url_title">URL</string>
    <string name="user_info_page_description_title">Description</string>
    <string name="user_info_page_web_site_url_title">WebSite URL</string>
    <string name="user_info_page_organization_title">Organization</string>
    <string name="user_info_page_location_title">Location</string>
    <string name="user_info_page_following_user_count_title">Following Users</string>
    <string name="user_info_page_followers_count_title">Followers</string>
    <string name="user_info_page_post_item_count_title">Post Count</string>
    <string name="menu_article_info_title">Info</string>
    <string name="article_info_title_tag_id">title</string>
    <string name="article_info_user_tag_id">user</string>
    <string name="article_info_tag_tag_id">tag</string>
    <string name="article_info_comment_tag_id">comment</string>
    <string name="article_info_user_title">Post User</string>
    <string name="article_info_tag_title">Tag(%1$d)</string>
    <string name="article_info_comment_title">Comments(%1$d)</string>
    <string name="article_info_stock_user_tag_id">StockUser</string>
    <string name="article_info_stock_user_title">Stock(%1$d)</string>
    <string name="article_detail_counter_text">comment(%1$d) / stock(%2$d)</string>
    <string name="login_error_user_name_text">Please enter a username.</string>
    <string name="login_error_password_text">Please enter a password.</string>
    <string name="left_drawer_user_info_title">My Profile</string>

    <string name="api_error_title">API Error</string>
    <string name="api_error_message">No value was returned from the server of Qiita. \nPlease try again after some time.</string>
    <string name="search_error_title">Search Result</string>
    <string name="search_error_message">Post was not found. \nSearch query correct? \nSearch query you entered : "%1$s"</string>
</resources>
